# storage/api-docs/api-docs.json
@@ -3313,9 +3313,9 @@
                         }
                     },
                     {
-                        "name": "sort_distance",
+                        "name": "sort_rate",
                         "in": "query",
-                        "description": "sort_distance(asc,desc)",
+                        "description": "sort_rate(asc,desc)",
                         "required": false,
                         "schema": {
                             "type": "string"
